[gd_scene load_steps=34 format=3 uid="uid://r7co5ctoi40x"]

[ext_resource type="Theme" uid="uid://gd8a1eh4nmj" path="res://zerotohero.tres" id="1_vcdwp"]
[ext_resource type="Theme" uid="uid://cedwp0r0ne1oe" path="res://difftheme.tres" id="2_k7o27"]
[ext_resource type="Script" uid="uid://cg3506wxltpru" path="res://setting_ui.gd" id="2_vmnj6"]
[ext_resource type="Script" uid="uid://s7egiuu12fqf" path="res://h_slider.gd" id="3_vmnj6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7o27"]
bg_color = Color(0.99, 0.75900006, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmnj6"]
bg_color = Color(0.7162914, 0.5489327, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4jwf"]
bg_color = Color(1, 0.95199996, 0.04000002, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s4khu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t0j6p"]
bg_color = Color(1, 0.7294118, 0.039215688, 0.6901961)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mb3u7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tr5a3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_webjj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdve4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vcdwp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vcdwp"]
bg_color = Color(0.99, 0.75900006, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_miime"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dk8fx"]
bg_color = Color(1, 0.95199996, 0.04000002, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wyk22"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdg5r"]
bg_color = Color(1, 0.7294118, 0.039215688, 0.6901961)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5gsvb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2dcdq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gooa6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocsn7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k7o27"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmgjs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_snlg1"]
bg_color = Color(1, 0.95199996, 0.04000002, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ie05c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldknq"]
bg_color = Color(1, 0.7294118, 0.039215688, 0.6901961)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_it7mc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78jb8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yetvs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vfmxh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vmnj6"]

[node name="Setting UI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_vcdwp")
script = ExtResource("2_vmnj6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -175.5
offset_right = 304.0
offset_bottom = 175.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_k7o27")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.0
offset_right = 81.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.99, 0.75900006, 0, 1)
text = "Settings"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.23400001
anchor_right = 0.5
anchor_bottom = 0.23400001
offset_left = -83.0
offset_top = -17.134003
offset_right = 82.0
offset_bottom = 16.865997
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.99, 0.75900006, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Volume"

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.38000003
anchor_right = 0.5
anchor_bottom = 0.38000003
offset_left = -51.0
offset_top = -19.380005
offset_right = 108.0
offset_bottom = 19.619995
theme_override_colors/font_color = Color(0.99, 0.75900006, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Music"

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.49800003
anchor_top = 0.54
anchor_right = 0.49800003
anchor_bottom = 0.54
offset_left = -35.784027
offset_top = -19.540009
offset_right = 35.215973
offset_bottom = 19.459991
theme_override_colors/font_color = Color(0.99, 0.75900006, 0, 1)
theme_override_font_sizes/font_size = 15
text = "SFX"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.437
anchor_right = 0.5
anchor_bottom = 0.437
offset_left = -137.0
offset_top = -45.0
offset_right = 169.0
offset_bottom = -18.0
max_value = 1.0
step = 0.001
script = ExtResource("3_vmnj6")
bus_name = "music"

[node name="HSlider" type="HSlider" parent="HSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.86800003
anchor_top = 0.5
anchor_right = 0.878
anchor_bottom = 0.51600003
offset_left = -265.608
offset_top = 11.5
offset_right = 44.281982
offset_bottom = 101.492
max_value = 1.0
step = 0.001

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HSlider"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="HSlider/AudioStreamPlayer"]

[node name="Button" type="Button" parent="."]
layout_mode = 1
offset_left = -272.0
offset_top = 76.0
offset_right = -105.0
offset_bottom = 129.0
theme_override_colors/font_color = Color(0.3878851, 0.16530001, 0.57, 1)
theme_override_colors/font_focus_color = Color(0.3878851, 0.16530001, 0.57, 1)
theme_override_colors/font_pressed_color = Color(0.66363984, 0, 1.1981649, 1)
theme_override_colors/font_hover_color = Color(0.5905002, 0.089999974, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_k7o27")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_vmnj6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v4jwf")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_s4khu")
theme_override_styles/hover = SubResource("StyleBoxFlat_t0j6p")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_mb3u7")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_tr5a3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_webjj")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mdve4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vcdwp")
text = "Account"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = -82.0
offset_top = 77.0
offset_right = 79.0
offset_bottom = 129.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.3878851, 0.16530001, 0.57, 1)
theme_override_colors/font_focus_color = Color(0.3878851, 0.16530001, 0.57, 1)
theme_override_colors/font_pressed_color = Color(0.66363984, 0, 1.1981649, 1)
theme_override_colors/font_hover_color = Color(0.5905002, 0.089999974, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_vcdwp")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_miime")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dk8fx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_wyk22")
theme_override_styles/hover = SubResource("StyleBoxFlat_rdg5r")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_5gsvb")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_2dcdq")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_gooa6")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ocsn7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k7o27")
text = "Credits"

[node name="Button3" type="Button" parent="Button2"]
layout_mode = 1
anchors_preset = -1
offset_left = 187.0
offset_top = 1.0
offset_right = 350.0
offset_bottom = 53.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.3878851, 0.16530001, 0.57, 1)
theme_override_colors/font_focus_color = Color(0.3878851, 0.16530001, 0.57, 1)
theme_override_colors/font_pressed_color = Color(0.66363984, 0, 1.1981649, 1)
theme_override_colors/font_hover_color = Color(0.5905002, 0.089999974, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_vcdwp")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_miime")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dk8fx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_wyk22")
theme_override_styles/hover = SubResource("StyleBoxFlat_rdg5r")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_5gsvb")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_2dcdq")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_gooa6")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ocsn7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k7o27")
text = "Guide"

[node name="Button4" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = -296.0
offset_top = -170.0
offset_right = -256.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.39, 0.39, 1)
theme_override_colors/font_focus_color = Color(1, 0.39, 0.39, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.99, 0.59400004, 0.59400004, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_vcdwp")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_dmgjs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_snlg1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_ie05c")
theme_override_styles/hover = SubResource("StyleBoxFlat_ldknq")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_it7mc")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_78jb8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_yetvs")
theme_override_styles/disabled = SubResource("StyleBoxFlat_vfmxh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vmnj6")
text = "X"

[connection signal="pressed" from="Button" to="." method="_on_acc_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_cred_pressed"]
[connection signal="pressed" from="Button2/Button3" to="." method="_on_htp_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_exit_pressed"]
